--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
             <div class="card-3d">
                 <div class="card-front">
                     <i>💖</i>
-                    <h3>Kasih Sayang</h3>
+                    <h3>Sehat Selalu</h3>
                 </div>
                 <div class="card-back">
                     <p>Setiap detik bersamamu adalah anugerah terindah dalam hidupku.</p>
@@ -877,7 +877,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <div class="timeline-date">14 Februari 2024</div>
+                    <div class="timeline-date">kapan ya kita pertama kali bertemu</div>
                     <h3>Pertama Bertemu</h3>
                     <p>di litmatch dan bermain ml menggunakan fanny exp dan kamu terkesan dengan fanny exp ku.
                         benerkan????.</p>
